--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">FurnitureKart</string>
     <string name="nav_open">Open</string>
     <string name="nav_close">Close</string>
+    <string name="shop">Shop</string>
+    <string name="search">Search</string>
+    <string name="orders">Orders</string>
+    <string name="account">Account</string>
 </resources>
